# send-to-kindle

./: .gitignore  .rustc_info.json  .rustdoc_fingerprint.json  Cargo.toml  README.md  all.html  crates.js  help.html  search-index.js  settings.html  struct.Args.html
.github/workflows/: release-s2k-create.yaml  send-to-kindle.yaml
debug/.fingerprint/aho-corasick-401201066320b8d9/: lib-aho_corasick  lib-aho_corasick.json
debug/.fingerprint/async-trait-027b5e57c925355b/: lib-async-trait  lib-async-trait.json
debug/.fingerprint/async-trait-100081bcfcdae162/: build-script-build-script-build  build-script-build-script-build.json
debug/.fingerprint/async-trait-181f2110b431a1a4/: run-build-script-build-script-build  run-build-script-build-script-build.json
debug/.fingerprint/autocfg-9fb091cf1770a8cc/: lib-autocfg  lib-autocfg.json
debug/.fingerprint/base64-cc152ca303a5d96c/: lib-base64  lib-base64.json
debug/.fingerprint/base64-db4f6738e4097bde/: lib-base64  lib-base64.json
debug/.fingerprint/bitflags-4c54368c17aabc3b/: lib-bitflags  lib-bitflags.json
debug/.fingerprint/bytes-4ecc7bbc50710f8d/: lib-bytes  lib-bytes.json
debug/.fingerprint/cc-373a56eeff27613a/: lib-cc  lib-cc.json
debug/.fingerprint/cfg-if-ed9d9c3fbe407855/: lib-cfg-if  lib-cfg-if.json
doc/: settings.html  source-files.js
doc/send_to_kindle/: fn.send_files_to_kindle.html  fn.send_to_kindle.html  index.html  sidebar-items.js
media/: send-to-kindle.xcf
send_to_kindle/: all.html  fn.send_files_to_kindle.html  fn.send_to_kindle.html  index.html  struct.Args.html
src/: lib.rs  main.rs
src/send_to_kindle/: lib.rs.html
(+344 files in other folders)
