[package]
name = "send-to-kindle"
version = "1.0.0"
edition = "2021"
license = "Apache-2.0"
keywords = ["amazon", "automation", "ebooks", "kindle", "send"]
categories = ["command-line-utilities", "wasm"]
description = "A command-line utility and library for sending files to your kindle app or device by (ab)using the www.amazon.com/sendtokindle web interface."
readme = "README.md"
homepage = "https://gstavrinos.github.io/send-to-kindle/send_to_kindle/"
repository = "https://github.com/gstavrinos/send-to-kindle/"

[dependencies]
thirtyfour = { version = "0.31.0" }
serde_json = { version = "1.0.91" }
geckodriver = { version = "0.32.0" }
serde = { version = "1.0", features = ["derive"]}
tokio = { version = "1.24", features = ["full"] }
clap = { version = "4.0.32", features = ["derive"] }
